--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multiparty": "^4.1.3",
     "promise": "^8.0.1",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "socket.io": "^2.1.1"
   }
 }
