--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
