--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "cookie": "^0.3.1",
     "ect": "^0.5.9",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.20.1",
     "multiparty": "^4.1.3",
     "promise": "^8.0.1",
