--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "multiparty": "^4.2.1",
     "promise": "^8.0.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "socket.io": "^2.3.0"
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
