--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chokidar": "^3.3.1",
     "cookie": "^0.4.0",
     "ect": "^0.5.9",
+    "iconv": "^3.0.0",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.24.0",
     "multiparty": "^4.2.1",
